--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -7,7 +7,7 @@ body #wall #tag-2 {
   display: none;
 }
 
-body div#wall #tag-3 .slick {
+body div#wall #tag-3.slick {
   display: none;
 }
 
@@ -15,7 +15,7 @@ body div#wall #tag-3 .slick {
   display: none;
 }
 
-body div#wall .parent #tag-5.slick {
+body div#wall div.parent #tag-5.slick {
   display: none;
 }
 
@@ -23,6 +23,6 @@ body div#wall div.parent div:last-child div#tag-6 {
   display: none;
 }
 
-body div#wall div.parent div > #tag-7.slick {
+html body div#wall div.parent div > #tag-7.slick {
   display: none;
 }
